--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Твоє Прізвище та Ім'я">
+    <meta name="author" content="Prodaniuk Ostap">
     <title>Туризм - Галерея</title>
 </head>
 <body>
