--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Туризм - Головна</title>
 </head>
 <body>
-    <h1>Ласкаво просимо до світу туризму!</h1>
+    <h1>Ласкаво просимо до світу туризму</h1>
     <p>Це головна сторінка сайту про туризм. Тут ви знайдете інформацію про найкращі туристичні напрямки України та світу, види відпочинку та корисні поради для мандрівників.</p>
 </body>
 </html>
